# sweetpad

./: .env.example  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierrc.json  .vscodeignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVICE_DEBUGGING_FIX.md  LICENSE.md  README.md  SWEETPAD_ARCHITECTURE.md  biome.jsonc  esbuild.config.mjs  eslint.config.mjs  jest.config.js  package-lock.json  package.json  rolldown.config.mjs  tsconfig.json  vitest.config.ts
sweetpad-cli/: Cargo.toml  build.rs
sweetpad-cli/src/: lib.rs  vscode_cli.rs
sweetpad-cli/src/cli/: config.rs  devicectl.rs  merge.rs  mod.rs  oslog.rs  process.rs  progress.rs  pymobiledevice3.rs  render.rs  resolve.rs  scaffold.rs  simctl.rs  state.rs  swiftpm.rs
sweetpad-cli/src/cli/commands/: app.rs  bsp.rs  build.rs  context.rs  dependency.rs  merge.rs  pbxproj.rs  project.rs  scheme.rs  settings.rs  simulator.rs  spm.rs  test.rs
sweetpad-cli/src/cli/inject/: client.rs  recompiler.rs  server.rs
sweetpad-cli/tests/: cli_json_envelope.rs  spm_oracle.rs
sweetpad-core/: Cargo.toml  build.rs
sweetpad-core/examples/: dump_settings.rs
sweetpad-core/src/: build_context.rs  build_settings.rs  framing.rs  lib.rs
sweetpad-core/src/bsp/: control.rs  mod.rs
sweetpad-core/tests/: bsp_arg_invariants.rs  bsp_config.rs  bsp_conformance.rs  bsp_corpus_completion.rs  bsp_did_change.rs  bsp_lsp_e2e.rs  bsp_prepare.rs  bsp_typecheck_oracle.rs  bsp_workspace.rs  build_settings.rs  compiler_args_oracle.rs  corpus_oracle.rs  custom_configuration_oracle.rs  discovery_oracle.rs  foreign_workspace_oracle.rs  per_target_oracle.rs  project_defaults_oracle.rs  project_resolution_fixes.rs  scheme_planner.rs  showbuildsettings_live_diff.rs  symroot_override_oracle.rs  synthetic_override_oracle.rs  version_and_optimization_gates.rs  xcconfig_resolution_oracle.rs
sweetpad-core/tests/common/: mod.rs
sweetpad-lib/: .gitignore  AUDIT_IMPROVEMENTS.md  CLAUDE.md  CLI_DESIGN.md  CLI_VSCODE_MERGE_PLAN.md  COVERAGE.md  Cargo.toml  DOCS.md  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PLAN_BSP.md  PLAN_COMPILER_ARGS.md  README.md  UPDATING_XCODE_VERSIONS.md  build.rs  package.json  rust-toolchain.toml
sweetpad-lib/ci/: build-injection-client.sh  catalyst-oracle.sh  deriveddata-oracle.sh  hot-reload-e2e.sh  smoke.sh  workspace-oracle.sh
sweetpad-lib/ci/fixture-app/: .gitignore  project.yml
sweetpad-lib/ci/fixture-catalyst/: project.yml
sweetpad-lib/ci/fixture-catalyst/Sources/: CatalystProbe.swift
sweetpad-lib/ci/fixture-deriveddata/: .gitignore  project.yml
sweetpad-lib/ci/fixture-deriveddata/Sources/: DDProbe.swift
sweetpad-lib/ci/fixture-spm/: .gitignore  Package.swift
sweetpad-lib/ci/fixture-workspace/: .gitignore
sweetpad-lib/ci/fixture-workspace/Apps.xcworkspace/: contents.xcworkspacedata
sweetpad-lib/ci/hot-reload-spike/: .gitignore  run-spike.sh
sweetpad-lib/ci/hot-reload-spike/fixture/: project.yml
sweetpad-lib/ci/hot-reload-spike/server/: Cargo.toml
sweetpad-lib/ci/tart/: README.md  capture-runner.sh  capture.sh  cirrus.yml.example  env-setup.sh  env.sh  images.json
sweetpad-lib/corpus/: manifest.json
sweetpad-lib/examples/: dump_settings.rs  gen_embedded_catalog.rs  roundtrip_diff.rs
sweetpad-lib/fixtures/: AUDIT.json  AUDIT.md  FIXTURES.md  REPORT.json  REPORT.md
sweetpad-lib/fixtures/_synthetic-assetsym/project/: project.yml
sweetpad-lib/fixtures/_synthetic-cocoapods/project/: .gitignore  Podfile  project.yml
sweetpad-lib/fixtures/_synthetic-coredata/project/: project.yml
sweetpad-lib/fixtures/_synthetic-intents/project/: project.yml
sweetpad-lib/scripts/: 00_bootstrap.py  01_clone_corpus.py  02_capture_metadata.py  03_run_builds.py  04_snapshot_xcspecs.py  05_validate.py  06_audit_coverage.py  07_synthetic_overrides.py  08_global_defaults.py  09_per_project_settings.py  10_xcconfig_resolution.py  11_synthetic_xcconfigs.py  12_pif_dumps.py  13_capture_version.py  14_compare_versions.py  15_custom_configuration.py  16_capture_compiler_args.py  17_static_library.py  18_rich_settings.py  19_multimodule.py  20_objc_headers.py  21_mutation_audit.py  22_spm_cli_oracle.py  common.py
sweetpad-lib/scripts/toolshim/: _shim.py  dsymutil
sweetpad-lib/src/: bplist.rs  build_context.rs  build_settings.rs  catalog_cache.rs  compiler_args.rs  condition.rs  destination.rs  file_cache.rs  framing.rs  lib.rs  node.rs  paths.rs  pbxproj.rs  pbxproj_merge.rs  pbxproj_writer.rs  project.rs  resolver.rs  scheme.rs  spm_pbxproj.rs  spm_resolved.rs  vscode_cli.rs  workspace.rs  xcconfig.rs  xcode.rs  xcode_hash.rs  xcscheme.rs  xcspec.rs
sweetpad-lib/src/bsp/: control.rs  framing.rs  mod.rs
sweetpad-lib/src/cli/: backend.rs  buildlog.rs  config.rs  devicectl.rs  merge.rs  mod.rs  oslog.rs  output.rs  plan.rs  process.rs  progress.rs  pymobiledevice3.rs  rawmode.rs  render.rs  resolve.rs  scaffold.rs  simctl.rs  state.rs  swiftpm.rs  xcodebuild.rs  xtool.rs
sweetpad-lib/tests/: adversarial_inputs.rs  bsp_arg_invariants.rs  bsp_config.rs  bsp_conformance.rs  bsp_corpus_completion.rs  bsp_did_change.rs  bsp_lsp_e2e.rs  bsp_prepare.rs  bsp_typecheck_oracle.rs  bsp_workspace.rs  build_settings.rs  cli_json_envelope.rs  compiler_args_oracle.rs  corpus_oracle.rs  custom_configuration_oracle.rs  discovery_oracle.rs  foreign_workspace_oracle.rs  oracle_regression_proofs.rs  pbxproj.rs  per_target_oracle.rs  project.rs  project_defaults_oracle.rs  project_resolution_fixes.rs  resolve.rs  resolver.rs  scheme_planner.rs  serializer_roundtrip.rs  showbuildsettings_live_diff.rs  spm_oracle.rs  symroot_override_oracle.rs  synthetic_override_oracle.rs  version_and_optimization_gates.rs  vscode_cli.rs  xcconfig.rs  xcconfig_engine_fixes.rs  xcconfig_resolution_oracle.rs  xcscheme.rs  xcspec.rs
sweetpad-lib/tests/common/: argv.rs  mod.rs
sweetpad-lib/xcspec-cache/xcode-15.4.0/: meta.json
sweetpad-lib/xcspec-cache/xcode-16.4.0/: meta.json
sweetpad-lib/xcspec-cache/xcode-26.5.0/: meta.json
sweetpad-vscode/native/: Cargo.toml  build.rs  package.json
sweetpad-vscode/native/src/: lib.rs
(+2835 files in other folders)
