[package]
name = "sweetpad"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
description = "Resolver and tooling for Xcode project files (pbxproj, xcconfig, schemes) and build settings."
authors = ["Yevhenii Hyzyla <hyzyla@gmail.com>"]
publish = false

# The resolver is interface-agnostic: every `src/*` module except `node.rs`
# knows nothing about any binding technology. `rlib` for integration tests and
# future bindings; `cdylib` for the N-API node addon. A second interface (e.g. a
# PyO3 `python.rs`) would be another feature-gated thin module over the same core.
[lib]
crate-type = ["cdylib", "rlib"]

# The CLI entry point over the interface-agnostic core: a `compiler-args` dump and
# the `bsp` Build Server Protocol server (see PLAN_BSP.md). Gated on the (default)
# `cli` feature so the N-API addon build (`--no-default-features --features node`)
# skips it — a standalone bin can't link napi's node-host-provided symbols.
[[bin]]
name = "sweetpad-lib"
path = "src/bin/sweetpad_lib.rs"
required-features = ["cli"]

# The shipped Build Server Protocol server. Starting it *is* the BSP server (no
# subcommand) — sourcekit-lsp execs it directly via buildServer.json.
[[bin]]
name = "sweetpad-bsp"
path = "src/bin/sweetpad_bsp.rs"
required-features = ["cli"]

[features]
# `cli` builds the `sweetpad-lib` binary; default-on so `cargo build`/`cargo test`
# get it (the integration tests exec it), and skipped by the addon build.
default = ["cli"]
cli = []
# Compiles the `src/node.rs` N-API bindings into the cdylib. Off by default so
# `cargo test` (and the interface-agnostic core) never link the Node runtime.
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"], optional = true }
napi-derive = { version = "3", optional = true }
# JSON-RPC for the BSP server. We hand-roll project-domain parsing (pbxproj,
# xcconfig) where Apple's formats have no good crate, but a well-known standard
# like JSON is not worth reinventing — see CLAUDE.md "Dependencies".
serde_json = "1"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
# Integration tests (the BSP conformance harness) build/parse JSON-RPC messages.
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Apple identifiers (ProductType, OpenStep, BuildSystem, etc.) appear in doc
# comments in their natural casing; backtick-wrapping all of them is noise.
doc_markdown = "allow"
