[package]
name = "sweetpad-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Interface-agnostic utilities for Xcode project files (pbxproj, xcconfig, schemes) and build-settings resolution."

[dependencies]
serde_json.workspace = true
unicode-normalization.workspace = true

[lints]
workspace = true
